tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_modulo_assign_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingModuloAssignRhs;

fn main() -> i32 {
  let x = 5;
  x %= ;
  return x;
}